apps/base/paperless-ngx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless-ngx
  labels:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/part-of: homelab-apps
