apps/base/paperless-ngx/document-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotenberg
  namespace: paperless-ngx
  labels:
    app.kubernetes.io/name: gotenberg
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gotenberg
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gotenberg
    spec:
      containers:
        - name: gotenberg
          # renovate: datasource=docker depName=docker.io/gotenberg/gotenberg
          image: docker.io/gotenberg/gotenberg:8.7
          args:
            - gotenberg
            - --chromium-disable-javascript=true
            - --chromium-allow-list=file:///tmp/.*
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: gotenberg
  namespace: paperless-ngx
spec:
  selector:
    app.kubernetes.io/name: gotenberg
  ports:
    - name: http
      port: 3000
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tika
  namespace: paperless-ngx
  labels:
    app.kubernetes.io/name: tika
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tika
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tika
    spec:
      containers:
        - name: tika
          # renovate: datasource=docker depName=docker.io/apache/tika versioning=loose
          image: docker.io/apache/tika:3.3.1.0
          ports:
            - name: http
              containerPort: 9998
          resources:
            requests:
              cpu: 25m
              memory: 256Mi
            limits:
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: tika
  namespace: paperless-ngx
spec:
  selector:
    app.kubernetes.io/name: tika
  ports:
    - name: http
      port: 9998
      targetPort: http
