apps/base/paperless-ngx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: paperless-ngx
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Paperless-ngx
    gethomepage.dev/description: Document management
    gethomepage.dev/group: Office
    gethomepage.dev/icon: paperless-ngx.png
    gethomepage.dev/app: paperless-ngx
    nginx.org/ssl-redirect: "false"
    nginx.org/redirect-to-https: "true"
    nginx.org/client-max-body-size: "100m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - paperless.f4mily.net
      secretName: wildcard-f4mily-net-tls
  rules:
    - host: paperless.f4mily.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-ngx
                port:
                  number: 80
